# MidiFeet-RasPi-PICO

./: .gitignore  CMakeLists.txt  README.md  i2c-slave.cpp  midiFeetPICO.h  midiFt_pico.cpp
include/: midiFeetPICO_lib.cpp  midiFeetPICO_lib.h
old.unused/: midiFeetPICO.h
